modified:   pom.xml 	new file:   src/main/java/com/encdata/corn/niblet/config/MailConfig.java 	new file:   src/main/java/com/encdata/corn/niblet/utils/TemplateParseUtils.java 	modified:   src/main/java/com/encdata/corn/niblet/utils/UserUtil.java 	modified:   src/main/java/com/encdata/corn/niblet/web/IndexController.java 	modified:   src/main/resources/application.properties 	new file:   src/main/resources/templates/verify.html

--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,14 @@
 			<version>2.8.5</version>
 		</dependency>
 		<dependency>
-			<groupId>com.enn.core</groupId>
+			<groupId>com.encdata.core</groupId>
 			<artifactId>platform</artifactId>
-			<version>1.0.0</version>
+			<version>4.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>ognl</groupId>
+			<artifactId>ognl</artifactId>
+			<version>3.1.12</version>
 		</dependency>
 	</dependencies>
 
