--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,22 +2,26 @@ server.port=8080
 server.address=0.0.0.0
 server.servlet.context-path=/NIBLET
 
-#ÅäÖÃtomcat
+#é…ç½®tomcat
 server.tomcat.uri-encoding=UTF-8
-
-
 
 spring.main.allow-bean-definition-overriding=true
 
+#è…¾è®¯ç”µå­é‚®ä»¶é…ç½®ä¿¡æ¯
+spring.mail.host=smtp.qq.com
+spring.mail.username=464833126@qq.com
+spring.mail.password=uhqfdhhfhmlfcbaj
+spring.mail.port=465
+
 #datasource
-spring.ds-user.url=jdbc:mysql://118.31.15.106:3070/imooc_user?useSSL=false&useUnicode=true&characterEncoding=UTF-8
-spring.ds-user.username=root
-spring.ds-user.password=dream
+spring.ds-user.url=jdbc:mysql://10.19.248.200:32677/imooc_user?useSSL=false&useUnicode=true&characterEncoding=UTF-8
+spring.ds-user.username=bocom
+spring.ds-user.password=bocommysql
 spring.ds-user.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.ds-order.url=jdbc:mysql://118.31.15.106:3069/imooc_order?useSSL=false&useUnicode=true&characterEncoding=UTF-8
-spring.ds-order.username=root
-spring.ds-order.password=dream
+spring.ds-order.url=jdbc:mysql://10.19.248.200:32677/imooc_order?useSSL=false&useUnicode=true&characterEncoding=UTF-8
+spring.ds-order.username=bocom
+spring.ds-order.password=bocommysql
 spring.ds-order.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #keycloak
@@ -28,12 +32,11 @@ keycloak.resource=NIBLET
 keycloak.credentials.secret=5e14d971-ce3b-40fd-989e-69dd1a5bef8d
 keycloak.use-resource-role-mappings=true
 
-#thymeleaÄ£°åÅäÖÃ
+#thymeleaæ¨¡æ¿é…ç½®
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-#spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
+spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
