--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,19 @@ spring.mail.port=465
 spring.ds-user.url=jdbc:mysql://10.19.248.200:32677/imooc_user?useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.ds-user.username=bocom
 spring.ds-user.password=bocommysql
-spring.ds-user.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.ds-user.driver-class-name=com.mysql.jdbc.Driver
 
+#slaveDB1
 spring.ds-order.url=jdbc:mysql://10.19.248.200:32677/imooc_order?useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.ds-order.username=bocom
 spring.ds-order.password=bocommysql
-spring.ds-order.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.ds-order.driver-class-name=com.mysql.jdbc.Driver
+
+#slaveDB2
+spring.ds-blog.url=jdbc:mysql://10.19.248.200:32677/blog?useSSL=false&useUnicode=true&characterEncoding=UTF-8
+spring.ds-blog.username=bocom
+spring.ds-blog.password=bocommysql
+spring.ds-blog.driver-class-name=com.mysql.jdbc.Driver
 
 #keycloak
 keycloak.realm=nj-stagingenv-web
