modified:   pom.xml modified:   src/main/java/com/encdata/corn/niblet/NibletApplication.java modified:   src/main/java/com/encdata/corn/niblet/config/DBConfig.java deleted:    src/main/java/com/encdata/corn/niblet/config/MybatisConfig.java modified:   src/main/java/com/encdata/corn/niblet/dao/BlogBrowseDao.java modified:   src/main/java/com/encdata/corn/niblet/dao/BlogContentDao.java modified:   src/main/java/com/encdata/corn/niblet/dao/BlogRemarkDao.java modified:   src/main/java/com/encdata/corn/niblet/dao/BlogTagDao.java modified:   src/main/java/com/encdata/corn/niblet/dao/MyBatisBaseDao.java modified:   src/main/java/com/encdata/corn/niblet/domain/BlogTag.java new file:   src/main/java/com/encdata/corn/niblet/dto/blog/Blog.java new file:   src/main/java/com/encdata/corn/niblet/dto/blog/BlogRemarkDto.java new file:   src/main/java/com/encdata/corn/niblet/service/BlogProxyImpl.java new file:   src/main/java/com/encdata/corn/niblet/service/intf/BlogProxy.java modified:   src/main/java/com/encdata/corn/niblet/web/BlogController.java modified:   src/main/resources/application.properties modified:   src/main/resources/mapper/BlogBrowseDao.xml modified:   src/main/resources/mapper/BlogContentDao.xml modified:   src/main/resources/mapper/BlogRemarkDao.xml modified:   src/main/resources/mapper/BlogTagDao.xml modified:   src/main/resources/templates/blog/list.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ server.servlet.context-path=/NIBLET
 
 #配置tomcat
 server.tomcat.uri-encoding=UTF-8
-
 spring.main.allow-bean-definition-overriding=true
 
 #腾讯电子邮件配置信息
@@ -13,30 +12,18 @@ spring.mail.username=464833126@qq.com
 spring.mail.password=uhqfdhhfhmlfcbaj
 spring.mail.port=465
 
-#datasource
-spring.ds-user.url=jdbc:mysql://10.19.248.200:32677/imooc_user?useSSL=false&useUnicode=true&characterEncoding=UTF-8
-spring.ds-user.username=bocom
-spring.ds-user.password=bocommysql
-spring.ds-user.driver-class-name=com.mysql.jdbc.Driver
-
-#slaveDB1
-spring.ds-order.url=jdbc:mysql://10.19.248.200:32677/imooc_order?useSSL=false&useUnicode=true&characterEncoding=UTF-8
-spring.ds-order.username=bocom
-spring.ds-order.password=bocommysql
-spring.ds-order.driver-class-name=com.mysql.jdbc.Driver
-
-#slaveDB2
-spring.ds-blog.url=jdbc:mysql://10.19.248.200:32677/blog?useSSL=false&useUnicode=true&characterEncoding=UTF-8
-spring.ds-blog.username=bocom
-spring.ds-blog.password=bocommysql
-spring.ds-blog.driver-class-name=com.mysql.jdbc.Driver
+# 设置数据库相关
+spring.datasource.jdbc-url=jdbc:mysql://118.31.15.106:3070/blog?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=dream
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #keycloak
 keycloak.realm=nj-stagingenv-web
-keycloak.auth-server-url=http://10.19.151.133:8080/auth
+keycloak.auth-server-url=http://10.19.248.200:32601/auth
 keycloak.ssl-required=external
 keycloak.resource=NIBLET
-keycloak.credentials.secret=5e14d971-ce3b-40fd-989e-69dd1a5bef8d
+keycloak.credentials.secret=376ec6b2-3824-401b-92bf-d356a8824034
 keycloak.use-resource-role-mappings=true
 
 #thymelea模板配置
